# sos-emulator

./: LICENSE  README.md  index.html  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: artifacts.yml
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  ws.rs
src-tauri/src/ws/: sos.rs
src/Components/: Main.svelte  PayloadInfo.svelte  Player.svelte  Popup.svelte  RocketLeagueRecord.svelte
src/Components/Features/: PacketsQueue.svelte  PayloadsQueue.svelte  ReplaySimulator.svelte
src/Components/FirstLaunch/: FirstLaunch.svelte  GameGUID.svelte  MatchGUID.svelte  WebSocket.svelte  Welcome.svelte
src/Components/Packets/: GameBallHit.svelte  GameClockStarted.svelte  GameClockStopped.svelte  GameClockUpdatedSeconds.svelte  GameGoalScored.svelte  GameInitialized.svelte  GameMatchCreated.svelte  GameMatchDestroyed.svelte  GameMatchEnded.svelte  GamePodiumStart.svelte  GamePostCountdownBegin.svelte  GamePreCountdownBegin.svelte  GameReplayCreated.svelte  GameReplayEnd.svelte  GameReplayStart.svelte  GameReplayWillEnd.svelte  GameRoundStartedGo.svelte  GameStatfeedEvent.svelte  GameUpdateState.svelte  SOSVersion.svelte
src/Components/Payloads/: GameBallHit.svelte  GameClockStarted.svelte  GameClockStopped.svelte  GameClockUpdatedSeconds.svelte  GameGoalScored.svelte  GameInitialized.svelte  GameMatchCreated.svelte  GameMatchDestroyed.svelte  GameMatchEnded.svelte  GamePodiumStart.svelte  GamePostCountdownBegin.svelte  GamePreCountdownBegin.svelte  (+8 more)
src/lib/: SOS.ts
(+55 files in other folders)
