[package]
name = "sos-emulator"
version = "1.0.0"
description = "Emulate Rocket League SOS Plugin WebSocket"
authors = [ "pharuxtan" ]
repository = ""
default-run = "sos-emulator"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-rc.3", features = ["dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "shell-open", "system-tray"] }
tungstenite = "0.17"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
